--- a/rose-controler/src/main/resources/views/home.vm
+++ b/rose-controler/src/main/resources/views/home.vm
@@ -1,195 +1,188 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>盛行天下运营系统</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/static/home/css/home.css}" />
-    <style th:inline="text">
-        #north{
-            height:80px;background:#d8e1e4 url([[@{/static/home/img/headerBg.jpg}]]) no-repeat 0 0;background-size:100% 100%;
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" th:href="@{/static/home/bower_components/bootstrap/bootstrap.min.css}" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" th:href="@{/static/home/bower_components/font-awesome/css/font-awesome.min.css}" />
+    <!-- Theme style -->
+    <link rel="stylesheet" th:href="@{/static/home/dist/css/AdminLTE.min.css}" />
+    <!-- AdminLTE Skins. Choose a skin from the css/skins folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" th:href="@{/static/home/dist/css/skins/_all-skins.min.css}" />
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic" />
+    <style>
+        body {
+            overflow:hidden;
         }
     </style>
-    <link rel="stylesheet" th:href="@{/static/home/js/themes/default/easyui.css}" />
-    <link rel="stylesheet" th:href="@{/static/home/js/themes/icon.css}" />
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var contextPath = [[@{/}]];
-        var interceptorToken = [[${token}]];
-        var interceptorUserId = [[${userId}]];
-        /*]]>*/
-    </script>
-    <script th:src="@{/static/home/js/jquery-1.4.2.min.js}" />
-    <script th:src="@{/static/home/js/jQuery.easyui.js}" />
-    <script th:src="@{/static/myFun.js}" />
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        //tab close
-        function tabClose() {
-            /*双击关闭TAB选项卡*/
-            $(".tabs-inner").dblclick(function(){
-                var subtitle = $(this).children("span").text();
-                $('#tabs').tabs('close',subtitle);
-            });
+</head>
+<body class="hold-transition skin-blue sidebar-mini">
+<div class="wrapper">
 
-            $(".tabs-inner").bind('contextmenu',function(e){
-                $('#mm').menu('show', {
-                    left: e.pageX,
-                    top: e.pageY,
-                });
+    <header class="main-header">
+        <!-- Logo -->
+        <a href="index.html" class="logo">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <span class="logo-mini"><b>运管</b></span>
+            <!-- logo for regular state and mobile devices -->
+            <span class="logo-lg"><b>运营管理平台</b></span>
+        </a>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top">
+            <!-- Sidebar toggle button-->
+            <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button" onclick="toggleClick()">
+                <span class="sr-only">Toggle navigation</span>
+            </a>
 
-                var subtitle =$(this).children("span").text();
-                $('#mm').data("currtab",subtitle);
+            <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="hidden-xs">用户：悟空</span>
+                        </a>
+                    </li>
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="hidden-xs">修改密码</span>
+                        </a>
+                    </li>
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="hidden-xs">退出登录</span>
+                        </a>
+                    </li>
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="hidden-xs"></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Left side column. contains the logo and sidebar -->
+    <aside class="main-sidebar">
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+            <!-- sidebar menu: : style can be found in sidebar.less -->
+            <ul class="sidebar-menu" data-widget="tree">
+                <li class="active treeview menu-open" name="menuLiParent" id="111">
+                    <a href="#">
+                        <i class="fa fa-folder"></i>
+                        <span>Dashboard</span>
+                        <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span>
+                    </a>
+                    <ul class="treeview-menu" id="aaa1" name="treeViewMenu">
+                        <li class="active" name="menuLiChild" id="222"><a href="index1.html" target="contentIframe" onclick="menuClick('Dashboard', 'Dashboard v1', '111', '222', 'aaa1')"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                        <li name="menuLiChild" id="333"><a href="index2.html" target="contentIframe" onclick="menuClick('Dashboard', 'Dashboard v2', '111', '333', 'aaa1')"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <!-- /.sidebar -->
+    </aside>
 
-                return false;
-            });
-        }
-        //绑定右键菜单事件
-        function tabCloseEven() {
-            //关闭当前
-            $('#mm-tabclose').click(function(){
-                var currtab_title = $('#mm').data("currtab");
-                $('#tabs').tabs('close',currtab_title);
-            });
-            //全部关闭
-            $('#mm-tabcloseall').click(function(){
-                $('.tabs-inner span').each(function(i,n){
-                    var t = $(n).text();
-                    $('#tabs').tabs('close',t);
-                });
-            });
-            //关闭除当前之外的TAB
-            $('#mm-tabcloseother').click(function(){
-                var currtab_title = $('#mm').data("currtab");
-                $('.tabs-inner span').each(function(i,n){
-                    var t = $(n).text();
-                    if(t!=currtab_title) {
-                        $('#tabs').tabs('close',t);
-                    }
-                });
-            });
-            //关闭当前右侧的TAB
-            $('#mm-tabcloseright').click(function(){
-                var nextall = $('.tabs-selected').nextAll();
-                if(nextall.length==0){
-                    //msgShow('系统提示','后边没有啦~~','error');
-                    alert('后边没有啦~~');
-                    return false;
-                }
-                nextall.each(function(i,n){
-                    var t=$('a:eq(0) span',$(n)).text();
-                    $('#tabs').tabs('close',t);
-                });
-                return false;
-            });
-            //关闭当前左侧的TAB
-            $('#mm-tabcloseleft').click(function(){
-                var prevall = $('.tabs-selected').prevAll();
-                if(prevall.length==0){
-                    alert('到头了，前边没有啦~~');
-                    return false;
-                }
-                prevall.each(function(i,n){
-                    var t=$('a:eq(0) span',$(n)).text();
-                    $('#tabs').tabs('close',t);
-                });
-                return false;
-            });
-            //退出
-            $("#mm-exit").click(function(){
-                $('#mm').menu('hide');
-            });
-        }
-        function createFrame(url){
-            if (isNotEmpty(url) && url.indexOf('?') != -1) {
-                var tar = url.substring(contextPath.length, url.indexOf('?'));
-                var s = '<iframe name="' + tar + '" scrolling="auto" frameborder="0" src="'+url+'" style="width:100%;height:100%;"></iframe>';
-                return s;
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper" id="contentMain">
+        <!-- Content Header (Page header) -->
+        <section class="content-header" id="navHeader">
+            <h1>
+                Dashboard
+                <small>Dashboard v1</small>
+            </h1>
+        </section>
+
+        <!-- Main content -->
+        <iframe src="index1.html" name="contentIframe" frameborder="0" style="width:100%;height:100%;" id="contentIframe">
+
+        </iframe>
+        <!-- /.content -->
+    </div>
+</div>
+<!-- ./wrapper -->
+
+<!-- jQuery 3 -->
+<script th:src="@{/static/home/bower_components/jquery/dist/jquery.min.js}" />
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    $.widget.bridge('uibutton', $.ui.button);
+    /*]]>*/
+</script>
+<!-- Bootstrap 3.3.7 -->
+<script th:src="@{/static/home/bower_components/bootstrap/bootstrap.min.js}" />
+<!-- AdminLTE App -->
+<script th:src="@{/static/home/dist/js/adminlte.min.js}" />
+</body>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var menuParent = $("#111");
+    var menuChild = $("#222");
+    var treeMenu = $("#aaa1");
+    var contentMain = $('#contentMain');
+    var navHeader = $('#navHeader');
+    var contentIframe = $('#contentIframe');
+    function menuClick(menuParentName, menuChildName, menuParentId, menuChildId, treeMenuId){
+        var nav = "<h1>" + menuParentName + "<small>" + menuChildName + "</small></h1>";
+        $("#navHeader").html(nav);
+
+        menuParent = $('#' + menuParentId);
+        menuChild = $('#' + menuChildId);
+        treeMenu = $('#' + treeMenuId);
+        $("li[name='menuLiParent']").each(function(i, item){
+            var jitem = $(item);
+            if (jitem.hasClass('active') && !jitem.is(menuParent)){
+                jitem.removeClass("active");
             }
-            return "";
-        }
-        function addTab(subtitle, url){
-            if(!$('#tabs').tabs('exists',subtitle)){
-                $('#tabs').tabs('add',{
-                    title:subtitle,
-                    content:createFrame(url),
-                    closable:true,
-                    width:$('#mainPanle').width()-10,
-                    height:$('#mainPanle').height()-26
-                });
-            }else{
-                $('#tabs').tabs('select',subtitle);
+            if (!menuParent.hasClass('active')){
+                menuParent.addClass("active");
             }
-            tabClose();
-        }
-        //menu init
-        function menuInit(_menus) {
-            $(".easyui-accordion").empty();
-            var menulist = "";
-            $.each(_menus, function(i, n) {
-                menulist += '<div title="'+n.menuName+'"  icon="'+n.iconCls+'" style="overflow:auto;">';
-                menulist += '<ul>';
-                $.each(n.children, function(j, o) {
-                    var tar = "";
-                    if (isNotEmpty(o.url)) {
-                        tar = tar + o.url;
-                    }
-                    menulist += '<li><div><a target="' + tar + '" href="' + urlHandleContext(o.url) + '" ><span class="icon '+o.iconCls+'" ></span>' + o.menuName + '</a></div></li> ';
-                });
-                menulist += '</ul></div>';
-            });
-            $(".easyui-accordion").append(menulist);
-            $('.easyui-accordion li a').click(function(){
-                var tabTitle = $(this).text();
-                var url = $(this).attr("href");
-                addTab(tabTitle,url);
-                $('.easyui-accordion li div').removeClass("selected");
-                $(this).parent().addClass("selected");
-            }).hover(function(){
-                $(this).parent().addClass("hover");
-            },function(){
-                $(this).parent().removeClass("hover");
-            });
-            $(".easyui-accordion").accordion();
-            $('#tabs').tabs({
-                fit : true,
-                border : false
-            });
-            tabClose();
-            tabCloseEven();
-        }
-        $(function () {
-            $("#unameHomeSpan").html([[${uname}]]);
-            $("#loginOutHref").attr("href", urlHandleContext("login/out"));
-            //nav初始化
-            var res = ajaxSynchPostJson("user/menuManage/getUserMenu", null);
-            if (res.code == "200") {
-                menuInit(res.data);
-                addTab("上传下载", urlHandleContext("user/uploadDemo/toUploadDemo"));
+            if (jitem.hasClass('menu-open') && !jitem.is(menuParent)){
+                jitem.removeClass("menu-open");
+            }
+            if (!menuParent.hasClass('menu-open')){
+                menuParent.addClass("menu-open");
             }
         });
-        /*]]>*/
-    </script>
-</head>
-<body class="easyui-layout" style="overflow-y:hidden" scroll="no">
-<div id="north" region="north" split="true" border="false">
-	<div class="logo">盛行天下运营管理系统</div>
-	<div class="logout">您好，<span id="unameHomeSpan"/>&nbsp;|&nbsp; <a href="#" id="loginOutHref">退出登录</a></div>
-</div>
-<div id="west" region="west" split="true" title="导航菜单" style="width:180px;padding:10px;background-color: #E9FFEB">
-    <div class="easyui-accordion" fit="true" border="false" style="background-color: #E9FFEB"></div>
-</div>
-<div id="mainPanle" region="center" style="overflow:hidden;">
-    <div id="tabs" class="easyui-tabs" fit="true" border="false" />
-</div>
-
-<div id="mm" class="easyui-menu" style="width:150px;">
-	<div id="mm-tabclose">关闭</div>
-	<div id="mm-tabcloseall">全部关闭</div>
-	<div id="mm-tabcloseother">除此之外全部关闭</div>
-	<div class="menu-sep"></div>
-	<div id="mm-tabcloseright">当前页右侧全部关闭</div>
-	<div id="mm-tabcloseleft">当前页左侧全部关闭</div>
-	<div class="menu-sep"></div>
-	<div id="mm-exit">退出</div>
-</div>
-</body>
+        $("li[name='menuLiChild']").each(function(i, item){
+            var jitem = $(item);
+            if (jitem.hasClass('active') && !jitem.is(menuChild)){
+                jitem.removeClass("active");
+            }
+            if (!menuChild.hasClass('active')){
+                menuChild.addClass("active");
+            }
+        });
+        $('#contentIframe').height(contentMain.height() - navHeader.height() - 15);
+    }
+    var showFlag = true;
+    function toggleClick() {
+        if (showFlag) {
+            showFlag = false;
+        } else {
+            showFlag = true;
+            $("ul[name='treeViewMenu']").each(function(i, item){
+                var jitem = $(item);
+                jitem.hide();
+            });
+            treeMenu.show();
+        }
+    }
+    $(function () {
+        $('#contentIframe').height(contentMain.height() - navHeader.height() - 15);
+    });
+    /*]]>*/
+</script>
 </html>
