sunpeng springboot thyleaf 解除 严格校验

--- a/rose-controler/src/main/resources/views/home.vm
+++ b/rose-controler/src/main/resources/views/home.vm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,13 +7,13 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" th:href="@{/static/home/bower_components/bootstrap/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/static/home/bower_components/bootstrap/bootstrap.min.css}"></link>
     <!-- Font Awesome -->
-    <link rel="stylesheet" th:href="@{/static/home/bower_components/font-awesome/css/font-awesome.min.css}" />
+    <link rel="stylesheet" th:href="@{/static/home/bower_components/font-awesome/css/font-awesome.min.css}"></link>
     <!-- Theme style -->
-    <link rel="stylesheet" th:href="@{/static/home/dist/css/AdminLTE.min.css}" />
+    <link rel="stylesheet" th:href="@{/static/home/dist/css/AdminLTE.min.css}"></link>
     <!-- AdminLTE Skins. Choose a skin from the css/skins folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" th:href="@{/static/home/dist/css/skins/_all-skins.min.css}" />
+    <link rel="stylesheet" th:href="@{/static/home/dist/css/skins/_all-skins.min.css}"></link>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,15 +22,13 @@
     <![endif]-->
 
     <!-- Google Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"></link>
     <script th:inline="javascript">
-        /*<![CDATA[*/
         var contextPath = [[@{/}]];
         var interceptorToken = [[${token}]];
         var interceptorUserId = [[${userId}]];
-        /*]]>*/
     </script>
-    <script th:src="@{/static/myFun.js}" />
+    <script th:src="@{/static/myFun.js}"></script>
 </head>
 <body class="hold-transition skin-blue sidebar-mini" style="overflow:hidden;">
 <div class="wrapper">
@@ -104,19 +102,16 @@
 <!-- ./wrapper -->
 
 <!-- jQuery 3 -->
-<script th:src="@{/static/home/bower_components/jquery/dist/jquery.min.js}" />
+<script th:src="@{/static/home/bower_components/jquery/dist/jquery.min.js}"></script>
 <script th:inline="javascript">
-    /*<![CDATA[*/
     $.widget.bridge('uibutton', $.ui.button);
-    /*]]>*/
 </script>
 <!-- Bootstrap 3.3.7 -->
-<script th:src="@{/static/home/bower_components/bootstrap/bootstrap.min.js}" />
+<script th:src="@{/static/home/bower_components/bootstrap/bootstrap.min.js}"></script>
 <!-- AdminLTE App -->
-<script th:src="@{/static/home/dist/js/adminlte.min.js}" />
+<script th:src="@{/static/home/dist/js/adminlte.min.js}"></script>
 </body>
 <script th:inline="javascript">
-    /*<![CDATA[*/
     var menuParent;
     var menuParentId;
     var menuChild ;
@@ -236,6 +231,5 @@
             var treeMenu = $(treeMenuId);;
         }
     });
-    /*]]>*/
 </script>
 </html>
