--- a/rose-controler/src/main/resources/views/menu/menuManage.vm
+++ b/rose-controler/src/main/resources/views/menu/menuManage.vm
@@ -1,18 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{/static/easyui/themes/easy.common.css}" />
+    <link rel="stylesheet" th:href="@{/static/easyui/themes/easy.common.css}"></link>
     <script th:inline="javascript">
-        /*<![CDATA[*/
         var contextPath = [[@{/}]];
         var interceptorToken = [[${token}]];
         var interceptorUserId = [[${userId}]];
-        /*]]>*/
     </script>
-    <script th:src="@{/static/easyui/easy.common.js}" />
-    <script th:src="@{/static/myFun.js}" />
+    <script th:src="@{/static/easyui/easy.common.js}"></script>
+    <script th:src="@{/static/myFun.js}"></script>
     <script th:inline="javascript">
-        /*<![CDATA[*/
         function addMenuParentShow() {
             $('#manager_add').dialog('open');
             $('#roleNameAdd').focus();
@@ -247,7 +245,6 @@
             dataGridInit();
             searchMenu();
         });
-        /*]]>*/
     </script>
 </head>
 <body>
